<resources>
    <string name="app_name">project2</string>
    <string name="textview">History</string>
    <string name="textview2">Settings</string>
    <string name="name">Ivanov Ivan</string>
    <string name="city">Rostov</string>
    <string name="postavpiat">Privacy Policy</string>
    <string name="title_activity_main7">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>